# xiv-network-parser

./: Cargo.toml  README.md  run
example/: package-lock.json  package.json  test.js
src/: ffxiv.rs  main.rs  parser.rs
