[package]
name = "ffxiv-parser"
version = "0.1.0"
authors = ["Freehaha <freehaha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.7.0"
zmq = "0.9"
pnet = "0.23.0"
byteorder = "1.3.2"
inflate = "0.4.5"
