[package]
name = "ffxiv-network-parser"
version = "0.1.0"
authors = ["Freehaha <freehaha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.9.2"
zmq = "0.9.2"
byteorder = "1.3.2"
inflate = "0.4.5"
subprocess = "0.2.9"

[dependencies.pnet]
version = "0.31.0"

[dependencies.pnet_datalink]
version = "0.31.0"

[features]
vendored-zmq = ['zmq/vendored']
